style.css
html {
  scroll-behavior: smooth;
  overflow-x: hidden;
}

body {
  overflow-x: hidden;
  margin: 0;
  padding: 0;
  font-family: "Archivo";
}

a {
  cursor: pointer;
  color: black;
  text-decoration: none;
}

a:visited {
  color: black;
}

a:focused {
  color: black;
}

nav {
  position: fixed;
}

.main-content-box {
  margin-left: 160px;
  position: relative;
}

.side-nav {
  height: 100vh;
  display: flex;
  flex-direction: column;
  width: 160px;
  box-shadow: 1px 0 3px rgba(0, 0, 0, 0.24);
}
.side-nav > * {
  text-align: center;
}

#nav-title {
  color: white;
  background-color: #ba2d2d;
  font-weight: 700;
  font-size: 1.3em;
  padding: 7px 0;
}

.nav-block {
  display: flex;
  flex-direction: column;
  height: fit-content;
  justify-content: center;
  align-items: center;
  padding: 5px;
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
}
.nav-block h2 {
  font-weight: 500;
  font-size: 1.5em;
  margin: 0 0 5px 0;
}
.nav-block img {
  width: 50px;
  margin: 0 0 5px 0;
}

#test {
  height: 100px;
  margin-left: 160px;
  background-color: red;
}

#welcome-section {
  background-image: url("./images/background.png");
  background-size: cover;
  background-position: 90%;
  background-repeat: no-repeat;
  height: 100vh;
  position: relative;
  padding-left: 5px;
  background-clip: content-box;
}

#intro-part {
  position: relative;
  top: 30%;
  left: 10%;
  font-size: 1.2em;
  z-index: 10;
}
#intro-part > * {
  margin: 15px 0 0 0;
}
#intro-part h1 {
  margin: 0;
}
#intro-part h1 strong {
  color: #ba2d2d;
}

.two-buttons {
  display: flex;
  width: 250px;
  justify-content: space-between;
}
.two-buttons > *, .two-buttons > a > * {
  width: 120px;
  height: 50px;
}

.mini-about {
  font-weight: 700;
  margin: 5px 0;
}

.reg-box {
  border: 2px solid #ba2d2d;
  display: flex;
  align-items: center;
  justify-content: center;
  color: #ba2d2d;
  font-weight: 700;
  border-radius: 3px;
  box-sizing: border-box;
  cursor: pointer;
  box-shadow: 1px 2px 3px #00000015;
}

#cv-button, .github-button {
  cursor: pointer;
  background-color: #ba2d2d;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-shadow: 1px 2px 3px #00000015;
}
#cv-button span, .github-button span {
  font-weight: 700;
  color: white;
  margin-right: 5px;
  font-size: 1.1em;
}
#cv-button img, .github-button img {
  width: 25px;
  fill: white !important;
}

.section-divider {
  position: relative;
  width: 100%;
  height: 2px;
  background-color: #000000;
  margin-bottom: 100px;
  z-index: 1;
}
.section-divider div {
  z-index: -20;
  display: block;
  position: relative;
  top: -38px;
  width: 50px;
  margin: 0 auto;
  background-color: white;
  padding: 10px;
  border-radius: 100%;
  border: 3px solid black;
  display: flex;
  align-items: center;
  justify-content: center;
}
.section-divider div img {
  width: 50px;
}

.section-heading {
  display: inline-block;
  font-size: 2em;
  margin-bottom: 100px;
  font-weight: 700;
  text-align: left;
  padding-right: 20px;
  padding-bottom: 2px;
  border-bottom: 4px solid #ba2d2d;
}

.section {
  margin: 0 10%;
  margin-bottom: 150px;
}

.project-showcase {
  width: 100%;
  display: flex;
  justify-content: space-around;
  align-items: center;
  margin-bottom: 75px;
  flex-wrap: wrap;
}
.project-showcase h3 {
  font-size: 1.5em;
}

.project-graphic {
  margin-top: 50px;
  width: 400px;
  height: 300px;
  overflow: hidden;
  border-radius: 5px;
  box-shadow: 3px 3px 5px #00000036;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}

#p-1 {
  background-image: url("./images/Capture.PNG");
}

#p-2 {
  background-image: url("./images/crowdfuncing.PNG");
}

#p-3 {
  background-image: url("./images/iptracker.PNG");
}

#logo-timeline {
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.title-info {
  display: flex;
  align-items: center;
}

#red-vert {
  margin: 0 5px;
  height: 14px;
  width: 2px;
  background-color: #ba2d2d;
}

#chief {
  width: 70px;
}

.job-info {
  display: flex;
  justify-content: flex-start;
  align-items: center;
}
.job-info img {
  margin-right: 20px;
}

.work-info {
  margin-bottom: 50px;
  width: fit-content;
}
.work-info ul {
  position: relative;
  margin-left: 15%;
  top: -25px;
  z-index: -10;
}

.work-title {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  flex-direction: column;
}
.work-title h3 {
  font-size: 1.5em;
  margin: 0;
  width: fit-content;
  display: inline;
}

.main-info {
  display: flex;
  align-items: center;
}
.main-info span {
  font-style: italic;
}

#best-time {
  top: -6px;
  left: 140px;
}

#chief-time {
  left: 91px;
}

.time-in {
  font-size: 0.8em;
  position: relative;
  top: -21px;
  font-style: italic;
  color: #00000085;
  z-index: -10;
}

#best {
  width: 120px;
  height: 45px;
}

#best-catch-de {
  top: -10px;
}

#chief-de {
  top: -25px;
}

.skills-box {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  width: 70%;
  margin: 0 auto;
}
.skills-box > * {
  margin: 10px;
  cursor: pointer;
  transition: 0.2s;
}
.skills-box > *:hover {
  transform: scale(1.1);
}

#contact-box {
  width: 80%;
  margin: 0 auto;
}
#contact-box h3 {
  color: black;
  font-size: 2.5em;
  font-weight: 700;
  text-align: center;
  margin-top: 0;
}
#contact-box h3 strong {
  color: #ba2d2d;
  font-style: italic;
}

.contact-ways {
  display: flex;
  justify-content: space-between;
}

.contact-info {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 0 40px;
}
.contact-info img {
  width: 100px;
}
.contact-info span {
  margin-top: 20px;
  position: absolute;
  top: 100px;
  font-style: italic;
  font-size: 0.8em;
  text-align: center;
  white-space: nowrap;
  font-weight: 500;
}

footer {
  background-color: black;
  width: 100%;
  padding: 30px;
  display: flex;
  justify-content: center;
  align-items: center;
}
footer h3 {
  margin: 0;
  color: white;
  font-size: 1.7em;
}

.foot-nav {
  display: flex;
  margin: 0 50px;
  align-items: center;
  justify-content: space-evenly;
  height: 100%;
}
.foot-nav a, .foot-nav span {
  color: #ffffff79;
  font-style: italic;
  font-size: 0.9em;
}
.foot-nav span {
  margin: auto;
}

.foot-vert {
  width: 1px;
  height: 15px;
  background-color: #ba2d2d;
  margin: 0 10px;
}

@media only screen and (max-width: 1000px) {
  #welcome-section {
    height: 600px;
  }

  .section {
    width: 90%;
    margin: 0 auto 100px auto;
  }

  .project-showcase {
    flex-direction: column;
  }
  .project-showcase h3 {
    text-align: center;
  }
}
@media only screen and (max-width: 850px) {
  #logo-timeline {
    font-size: 0.7em;
  }

  .skills-box {
    width: 100%;
    margin: 0;
  }
  .skills-box img {
    width: 75px;
    height: 75px;
  }

  .section {
    margin-bottom: 120px;
  }

  #contact-box img {
    width: 50px;
  }
  #contact-box span {
    margin-top: 0px;
  }
}
@media only screen and (max-width: 700px) {
  .main-page {
    display: block;
  }

  #nav-title {
    display: inline;
    height: max-content;
    background-color: white;
    color: #ba2d2d;
    margin-right: 40px;
    font-size: 1.5em;
    font-weight: 700;
  }

  .side-nav {
    flex-direction: row;
    width: 100vw;
    background-color: white;
    height: fit-content;
    justify-content: center;
    align-items: center;
    z-index: 20;
    box-shadow: 0 3px 4px #00000021;
  }

  nav {
    z-index: 20;
  }

  .link-container {
    display: flex;
  }

  .nav-block {
    border: none;
    margin: 0 2px;
  }
  .nav-block img {
    width: 50px;
  }
  .nav-block h2 {
    display: none;
  }

  .main-content-box {
    position: static;
    margin: 0;
  }
}
@media only screen and (max-width: 600px) {
  #welcome-section {
    height: 400px;
    background-position: 30%;
  }

  .section-heading {
    margin-bottom: 5px;
  }

  #nav-title {
    margin-right: 10px;
  }
}
@media only screen and (max-width: 550px) {
  #contact.section {
    margin-bottom: 50px;
  }

  .contact-ways {
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
  }
  .contact-ways > div {
    margin-bottom: 60px;
  }

  .nav-block img {
    width: 30px;
  }

  .project-graphic {
    width: 300px;
    height: 200px;
  }

  footer {
    padding: 30px 0;
    width: 100%;
  }

  .foot-vert {
    margin: 0 5px;
  }

  #footer-title {
    font-size: 1em;
    margin-right: 10px;
  }

  .foot-nav {
    font-size: 0.8em;
    margin: 0;
  }

  .contact-info {
    margin: 0 10px;
  }
  .contact-info span {
    margin: 0;
    position: relative;
    top: 20px;
  }

  .section-heading {
    margin-bottom: 50px;
  }

  #welcome-section {
    background-position: 70%;
  }

  #intro-part {
    top: 25%;
    left: 5%;
  }

  .main-info {
    flex-direction: column;
    justify-content: center;
    margin: 0 auto;
  }
  .main-info img {
    margin: 0 0 10px 0;
  }

  .time-in {
    position: static;
  }

  .work-title {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .work-info {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  .work-info ul {
    position: static;
    margin: 20px 0 0 0;
  }

  #intro-part {
    font-size: 0.8em;
  }
  #intro-part .two-buttons {
    justify-content: center;
    align-items: center;
    width: fit-content;
  }
  #intro-part .two-buttons a {
    width: fit-content;
  }
  #intro-part .reg-box, #intro-part #cv-button {
    width: 80px;
    height: 40px;
    margin: 0 5px 0 0;
  }
}
@media only screen and (max-width: 400px) {
  .work-info {
    font-size: 1em;
  }

  #nav-title {
    margin: 0;
  }

  .foot-nav {
    flex-direction: column;
    margin-left: 10px;
  }
  .foot-nav > a {
    margin: 0 0 5px 0;
  }

  .foot-vert {
    display: none;
  }
}

/*# sourceMappingURL=style.css.map */

